fix the z-index of the main-overlay

--- a/css/main.css
+++ b/css/main.css
@@ -602,7 +602,7 @@ footer h1 {
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.72);
-    z-index: 5;
+    z-index: 6;
     display: none;
   }
 
